# server/src/files/delete-file.dto.ts
@@ -1,0 +1,5 @@
+export class DeleteFileDto {
+  readonly message: string;
+  readonly success: boolean;
+  readonly error?: string;
+}
