# server/src/roles/dto/role.dto.ts
@@ -1,6 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-
-export class CreateRoleDto {
-  readonly value: string;
-  readonly description: string;
-}
